cot-macros/tests/ui/attr_main_args.rs
#[cot::main]
async fn main(arg: i32) -> cot::Result<CotProject> {
    std::process::exit(0);
}
